Исправить логику